--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
 }
